--- a/frontend/resources/styles/common/refactor/color-defs.scss
+++ b/frontend/resources/styles/common/refactor/color-defs.scss
@@ -21,9 +21,9 @@
 
   // NOTIFICATION
   --dark-ok-color: var(--strong-green);
-  --dark-warning-color: #ff9b49;
+  --dark-warning-color: #ff6432;
   --dark-pending-color: var(--lilac);
-  --dark-error-color: #ff4986;
+  --dark-error-color: #ec1f1f;
 
   // LIGHT
   --light-gray-1: #fff;
