--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -70,12 +70,17 @@ $s-284: calc(var(--s-4) * 71);
 $s-300: calc(var(--s-4) * 75);
 $s-320: calc(var(--s-4) * 80);
 $s-348: calc(var(--s-4) * 87);
+$s-356: calc(var(--s-4) * 89);
+$s-364: calc(var(--s-4) * 91);
 $s-380: calc(var(--s-4) * 95);
 $s-400: calc(var(--s-4) * 100);
+$s-408: calc(var(--s-4) * 102);
+$s-440: calc(var(--s-4) * 110);
 $s-480: calc(var(--s-4) * 120);
 $s-500: calc(var(--s-4) * 125);
 $s-512: calc(var(--s-4) * 128);
 $s-520: calc(var(--s-4) * 130);
+$s-640: calc(var(--s-4) * 160);
 $s-664: calc(var(--s-4) * 166);
 $s-712: calc(var(--s-4) * 178);
 $s-736: calc(var(--s-4) * 184);
