--- a/frontend/resources/styles/common/refactor/z-index.scss
+++ b/frontend/resources/styles/common/refactor/z-index.scss
@@ -11,3 +11,4 @@ $z-index-4: 4; // modal
 $z-index-10: 10;
 $z-index-20: 20;
 $z-index-modal: 30; // When refactor finish we can reduce this number,
+$z-index-alert: 40; // When refactor finish we can reduce this number,
