--- a/frontend/resources/styles/main/partials/colorpicker.scss
+++ b/frontend/resources/styles/main/partials/colorpicker.scss
@@ -315,7 +315,7 @@
 
     .slider-selector.opacity {
       grid-area: "opacity";
-      align-self: start;
+      align-self: flex-start;
     }
   }
 
