--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -1522,7 +1522,7 @@
       flex-grow: 1;
       display: flex;
       flex-direction: column;
-      justify-content: start;
+      justify-content: flex-start;
       align-items: flex-start;
       row-gap: 1.5rem;
       .custom-input {
